@@ -1,3 +1,10 @@
+2009-09-28  Janis Johnson  <janis187@us.ibm.com>
+
+	* g++.dg/dfp: New directory.
+	* g++.dg/dg.exp: Prune tests in dfp directory.
+	* g++.dg/dfp/dfp/exp: New.
+	* g++.dg/dfp/mangle-mode.C: New test.
+
 2009-09-28  Michael Matz  <matz@suse.de>
 
 	* gcc.dg/builtins-44.c: Use __builtin_isinf_sign when checking
