@@ -1,3 +1,7 @@
+2009-09-28  Janis Johnson  <janis187@us.ibm.com>
+
+	* mangle.c (write_builtin_type): Support decimal float types.
+
 2009-09-28  Richard Henderson  <rth@redhat.com>
 
 	* cp-objcp-common.h (LANG_HOOKS_EH_USE_CXA_END_CLEANUP): New.
